# nessus_reportgen

./: .gitignore  MANIFEST.in  Makefile  README.md  bump_version.py  main.py  nessus-reportgen.spec  pyproject.toml
.github/workflows/: build.yml
example/inputs/: AU DC Full Scan_0a569j.csv  AU DC Full Scan_mkkthx.nessus  IN DC_2uxpnb.csv  MX_DC_Final_bgj044.csv  MX_DC_Final_nd1yeq.nessus  MY_DC_Final_6bnwsv.nessus  MY_DC_Final_tbxc94.csv  SA_DC_Final_xn4qtn.nessus  SA_DC_Final_ydxff6.csv  US_DC_Final_29uelt.csv  US_DC_Final_3pg0ta.nessus  ZA_VPC1_Final_a3v7j9.nessus  ZA_VPC2_Final_7dlfiy.nessus
example/inputs/ZA/: ZA_VPC1_Final_jy7dvo.csv  ZA_VPC2_Final_zvrnfg.csv
src/reportgen/: __init__.py  cli.py
src/reportgen/models/: finding.py
src/reportgen/parsers/: __init__.py  base.py  csv_parser.py  nessus_parser.py
src/reportgen/processors/: __init__.py  aggregator.py
src/reportgen/report/: __init__.py  doc_writer.py  excel_writer.py  themes.py
src/reportgen/utils/: __init__.py  logging.py  validators.py
tests/: test_aggregator.py
