[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nessus-reportgen"
dynamic = ["version"]
description = "Enterprise-grade Nessus vulnerability scan report generator"
readme = "README.md"
requires-python = ">=3.10, <3.15"
license = {text = "MIT"}
authors = [
    {name = "Nivesh Pritmani", email = "niveshp.work@gmail.com"}
]
keywords = ["nessus", "vulnerability", "reporting", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "loguru>=0.7.0",
    "openpyxl>=3.1.0",
    "lxml>=5.0.0",
    "python-docx>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
nessus-reportgen = "reportgen.cli:app"

[tool.hatch.build.targets.sdist]
exclude = ["example/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/reportgen"]
exclude = ["example/**"]

[tool.poetry]
name = "nessus-reportgen"
version = "v0.1.4"
description = "Enterprise-grade Nessus vulnerability scan report generator"
authors = ["Nivesh Pritmani <niveshp.work@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["nessus", "vulnerability", "reporting", "security"]
packages = [{ include = "reportgen", from = "src" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
]

[tool.poetry.dependencies]
python = ">=3.10, <3.15"
pydantic = ">=2.0.0"
typer = ">=0.9.0"
loguru = ">=0.7.0"
openpyxl = ">=3.1.0"
lxml = ">=5.0.0"
python-docx = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
black = ">=24.0.0"
ruff = ">=0.4.0"
mypy = ">=1.10.0"
pyinstaller = ">=6.0.0"
build = ">=1.0.0"

[tool.poetry.scripts]
nessus-reportgen = "reportgen.cli:app"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --cov=reportgen --cov-report=term-missing"
